5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4325/executions/1578_1560.log
== SUBMITION (2019-03-13 19:04:14) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.151476
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:27) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string."lower()")
-- EXECUTION TIME:
0.147489
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print(string."lower()")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:27) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string."lower()")
-- EXECUTION TIME:
0.160312
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print(string."lower()")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:30) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.201284
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:09:31) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.166564
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:30:55) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.208602
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:05) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower(string))
-- EXECUTION TIME:
0.219408
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1560/main.py", line 2, in <module>
    print(string.lower(string))
TypeError: lower() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:06) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower(string))
-- EXECUTION TIME:
0.15041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1560/main.py", line 2, in <module>
    print(string.lower(string))
TypeError: lower() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:06) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower(string))
-- EXECUTION TIME:
0.121611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1560/main.py", line 2, in <module>
    print(string.lower(string))
TypeError: lower() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:34) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."lower()")
-- EXECUTION TIME:
0.224204
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print(string."lower()")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:37) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.144633
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:31:37) 
-- CODE:
string = "Augusta Ada Bryon, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.108347
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada bryon, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.208024
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.156829
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.089834
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1578/1560/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:32:07) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.140797
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
